core/java/src/main/java/org/aiddl/core/java/parser/generated/AIDDLParser.java
/* Generated By:JavaCC: Do not edit this line. AIDDLParser.java */
package org.aiddl.core.java.parser.generated;

import java.util.ArrayList;
import java.util.List;

import org.aiddl.core.java.function.FunctionRegistry;
import org.aiddl.core.java.parser.Parser;
import org.aiddl.core.java.container.Container;
import org.aiddl.core.java.container.Entry;
import org.aiddl.core.java.representation.*;

@SuppressWarnings("all")
public class AIDDLParser implements AIDDLParserConstants {
  boolean verbose = false;

  public void setVerbose(boolean flag) {
    this.verbose = flag;
  }

  final public Term DomainDefinition(Container db, FunctionRegistry freg) throws ParseException {
  Term module = null;
  Term modAlias = null;
  Term type = null;
    jj_consume_token(OTUPLE);
    type = SymbolicTerm();
    modAlias = Term(db, freg);
    module = SymbolicTerm();
    jj_consume_token(CTUPLE);
      if ( !type.equals(Term.sym("#mod")) ) {
        {if (true) throw new IllegalStateException("First entry in module must use type #mod. Read: (" + type + " " + modAlias + " " + module + ")");}
      }
      Parser.setCurrentModule(module);
      db.addModule(module);
      db.addModuleAlias(module, modAlias, module);
      db.setEntry(module, new Entry(Term.sym("#mod"), modAlias, module));
    label_1:
    while (true) {
      Parser.setOpenExpression(true);
      jj_consume_token(OTUPLE);
      Entry(module, db, freg);
      jj_consume_token(CTUPLE);
      Parser.setOpenExpression(false);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OTUPLE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
    {if (true) return module;}
    throw new Error("Missing return statement in function");
  }

  final public void Entry(Term module, Container db, FunctionRegistry freg) throws ParseException {
  Term type;
  Term name;
  Term content;
  Term compiledModule;
  String fName = null;
    type = Term(db, freg);
    name = Term(db, freg);
    content = Term(db, freg);
    if ( type.equals(Term.sym("#req")) ) {
        if ( content instanceof SymbolicTerm ) {
           fName = Parser.getModuleFilename(content);
           if ( fName == null ) {
                {if (true) throw new IllegalStateException("Unknown module: " + content + " (requested by: " + module + ")");}
           }
        } else {
           fName = content.getStringValue().replace("\u005c"","");
        }

        compiledModule = Parser.parseFileInternal(fName, db, freg);
        Parser.setCurrentModule(module);
        db.addModuleAlias(module, name, compiledModule);
    } else if ( type.equals(Term.sym("#nms")) || type.equals(Term.sym("#namespace")) ) {
        if ( content instanceof SymbolicTerm ) {
          fName = Parser.getModuleFilename(content);
          if ( fName == null ) {
            {if (true) throw new IllegalStateException("Unknown module: " + content + " (requested by: " + module + ")");}
          }
        } else if ( content instanceof StringTerm ) {
          fName = content.getStringValue().replace("\u005c"","");
        }
        if ( fName != null ) {
          compiledModule = Parser.parseFileInternal(fName, db, freg);
          Parser.setCurrentModule(module);
          db.addModuleAlias(module, name, compiledModule);
        }
    }
    if ( module != null ) {
        db.setEntry(module, new Entry(type, name, content));
    } else {
        db.setEntry(new Entry(type, name, content));
    }
  }

  final public Term Term(Container db, FunctionRegistry freg) throws ParseException {
  Term term;
  Term value = null;
  Term resolvedModName = null;
    if (jj_2_2(4)) {
      term = IntegerTerm();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RATIONAL:
        term = RationalTerm();
        break;
      case SCIREAL:
      case REAL:
        term = RealTerm();
        break;
      case INF:
        term = InfTerm();
        break;
      case NAN:
        term = NanTerm();
        break;
      case SYMBOL:
        term = SymbolicTerm();
        break;
      case VARIABLE:
        term = VariableTerm();
        break;
      case STRING:
        term = StringTerm();
        break;
      case SREF:
        term = SelfReferenceTerm(db, freg);
        break;
      case FREF:
        term = FunctionReferenceTerm(db, freg);
        break;
      case OTUPLE:
      case OLIST:
      case OSET:
      case ANY:
        if (jj_2_1(6)) {
          term = TupleTerm(db, freg);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case OLIST:
            term = ListTerm(db, freg);
            break;
          case OSET:
            term = SetTerm(db, freg);
            break;
          case ANY:
            term = AnonymousVariableTerm();
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    if (jj_2_5(2)) {
      if (jj_2_4(2)) {
        jj_consume_token(ASSOC);
        value = Term(db, freg);
          term = Term.keyVal(term, value);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case REF:
          jj_consume_token(REF);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SYMBOL:
            value = SymbolicTerm();
            break;
          case VARIABLE:
            value = VariableTerm();
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
            resolvedModName = db.resolveModuleAlias(Parser.getCurrentModule(),value);
            if ( resolvedModName != null ) {
              term = Term.ref(term, value, resolvedModName);
            } else {
              term = Term.ref(term, value);
            }
          if (jj_2_3(2)) {
            jj_consume_token(ASSOC);
            value = Term(db, freg);
               term = Term.keyVal(term, value);
          } else {
            ;
          }
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } else {
      ;
    }
    {
        if ( verbose ) {
           System.out.println(term);
        }
    }
    {if (true) return term;}
    throw new Error("Missing return statement in function");
  }

  final public IntegerTerm IntegerTerm() throws ParseException {
  Token t;
  String s;
  int base = 10;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      t = jj_consume_token(INT);
                s = t.image; base = 10;
      break;
    case BIN:
      t = jj_consume_token(BIN);
                s = t.image.split("b")[1]; base = 2;
      break;
    case HEX:
      t = jj_consume_token(HEX);
                s = t.image.split("x")[1]; base = 16;
      break;
    case OCT:
      t = jj_consume_token(OCT);
                s = t.image.split("o")[1]; base = 8;
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Term.integer(Long.parseLong(s, base));}
    throw new Error("Missing return statement in function");
  }

  final public Term RationalTerm() throws ParseException {
  Token t;
    t = jj_consume_token(RATIONAL);
    Long p = Long.valueOf(t.image.split("/")[0]);
    Long q = Long.valueOf(t.image.split("/")[1]);
    {if (true) return Term.rational(p,q);}
    throw new Error("Missing return statement in function");
  }

  final public Term RealTerm() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case REAL:
      t = jj_consume_token(REAL);
      break;
    case SCIREAL:
      t = jj_consume_token(SCIREAL);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Term.real(Double.valueOf(t.image));}
    throw new Error("Missing return statement in function");
  }

  final public Term InfTerm() throws ParseException {
  Token inf_token;
    inf_token = jj_consume_token(INF);
    if ( inf_token.image.startsWith("-") )
      {if (true) return Term.infNeg();}
    else
      {if (true) return Term.infPos();}
    throw new Error("Missing return statement in function");
  }

  final public Term NanTerm() throws ParseException {
    jj_consume_token(NAN);
    {if (true) return Term.nan();}
    throw new Error("Missing return statement in function");
  }

  final public Term SymbolicTerm() throws ParseException {
  Token t;
    t = jj_consume_token(SYMBOL);
    {if (true) return Term.sym(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public StringTerm StringTerm() throws ParseException {
  Token t;
    t = jj_consume_token(STRING);
    {if (true) return Term.string(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public Term VariableTerm() throws ParseException {
  Token t;
    t = jj_consume_token(VARIABLE);
    if ( Parser.getCurrentModule().getStringValue() == null ) {
      {if (true) return Term.var(t.image);}
    } else {
      {if (true) return Term.var(t.image, Parser.getCurrentModule().getStringValue());}
    }
    throw new Error("Missing return statement in function");
  }

  final public Term SelfReferenceTerm(Container db, FunctionRegistry freg) throws ParseException {
  Term t;
    jj_consume_token(SREF);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYMBOL:
      t = SymbolicTerm();
      break;
    case OTUPLE:
      t = TupleTerm(db, freg);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Term selfAlias = db.findSelfAlias(Parser.getCurrentModule());
    {if (true) return Term.ref(t, selfAlias, Parser.getCurrentModule());}
    throw new Error("Missing return statement in function");
  }

  final public Term ExtReferenceTerm(Container db, FunctionRegistry freg) throws ParseException {
  Term name;
  Term module;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYMBOL:
      name = SymbolicTerm();
      break;
    case OTUPLE:
      name = TupleTerm(db, freg);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(REF);
    module = SymbolicTerm();
    Term resolvedModName = db.resolveModuleAlias(Parser.getCurrentModule(), module);
    if ( resolvedModName != null ) {
      {if (true) return Term.ref(name, module, resolvedModName);}
    } else {
      {if (true) return Term.ref(name, module);}
    }
    throw new Error("Missing return statement in function");
  }

  final public Term FunctionReferenceTerm(Container db, FunctionRegistry freg) throws ParseException {
  Term t;
    if (jj_2_7(2)) {
      jj_consume_token(FREF);
      t = SelfReferenceTerm(db, freg);
                                                {if (true) return Term.fref(t.asRef(), freg);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FREF:
        if (jj_2_6(3)) {
          jj_consume_token(FREF);
          t = ExtReferenceTerm(db, freg);
                                               {if (true) return Term.fref(t.asRef(), freg);}
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FREF:
            jj_consume_token(FREF);
            t = SymbolicTerm();
                                   {if (true) return Term.fref(t.asSym(), freg);}
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public TupleTerm TupleTerm(Container db, FunctionRegistry freg) throws ParseException {
  Term term;
  List<Term> L;
    jj_consume_token(OTUPLE);
      L = new ArrayList<Term>();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OTUPLE:
      case OLIST:
      case OSET:
      case SREF:
      case FREF:
      case ANY:
      case SCIREAL:
      case BIN:
      case HEX:
      case OCT:
      case INT:
      case RATIONAL:
      case REAL:
      case INF:
      case NAN:
      case SYMBOL:
      case VARIABLE:
      case STRING:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_2;
      }
      term = Term(db, freg);
      L.add(term);
    }
    jj_consume_token(CTUPLE);
      Term[] L_array = new Term[L.size()];
      for ( int i = 0 ; i < L_array.length ; i++ ) {
        L_array[i] = L.get(i);
      }
      {if (true) return Term.tuple(L_array);}
    throw new Error("Missing return statement in function");
  }

  final public Term ListTerm(Container db, FunctionRegistry freg) throws ParseException {
  Term term;
  List<Term> L;
    jj_consume_token(OLIST);
      L = new ArrayList<Term>();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OTUPLE:
      case OLIST:
      case OSET:
      case SREF:
      case FREF:
      case ANY:
      case SCIREAL:
      case BIN:
      case HEX:
      case OCT:
      case INT:
      case RATIONAL:
      case REAL:
      case INF:
      case NAN:
      case SYMBOL:
      case VARIABLE:
      case STRING:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_3;
      }
      term = Term(db, freg);
      L.add(term);
    }
    jj_consume_token(CLIST);
      Term[] L_array = new Term[L.size()];
      for ( int i = 0 ; i < L_array.length ; i++ ) {
        L_array[i] = L.get(i);
      }
      {if (true) return Term.list(L_array);}
    throw new Error("Missing return statement in function");
  }

  final public SetTerm SetTerm(Container db, FunctionRegistry freg) throws ParseException {
  Term term;
  List<Term> L;
    jj_consume_token(OSET);
      L = new ArrayList<Term>();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OTUPLE:
      case OLIST:
      case OSET:
      case SREF:
      case FREF:
      case ANY:
      case SCIREAL:
      case BIN:
      case HEX:
      case OCT:
      case INT:
      case RATIONAL:
      case REAL:
      case INF:
      case NAN:
      case SYMBOL:
      case VARIABLE:
      case STRING:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
      term = Term(db, freg);
      L.add(term);
    }
    jj_consume_token(CSET);
      Term[] L_array = new Term[L.size()];
      for ( int i = 0 ; i < L_array.length ; i++ ) {
        L_array[i] = L.get(i);
      }
      {if (true) return Term.set(L_array);}
    throw new Error("Missing return statement in function");
  }

  final public VariableTerm AnonymousVariableTerm() throws ParseException {
    jj_consume_token(ANY);
          {if (true) return Term.anonymousVar();}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_3R_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    xsp = jj_scanpos;
    if (jj_3_5()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_44() {
    if (jj_scan_token(ANY)) return true;
    return false;
  }

  private boolean jj_3R_30() {
    if (jj_scan_token(RATIONAL)) return true;
    return false;
  }

  private boolean jj_3R_28() {
    if (jj_3R_34()) return true;
    return false;
  }

  private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) return true;
    }
    if (jj_scan_token(REF)) return true;
    if (jj_3R_34()) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_scan_token(OCT)) return true;
    return false;
  }

  private boolean jj_3R_46() {
    if (jj_3R_34()) return true;
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_scan_token(HEX)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_scan_token(BIN)) return true;
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3R_49() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_27() {
    if (jj_3R_35()) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_scan_token(SREF)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_46()) {
    jj_scanpos = xsp;
    if (jj_3R_47()) return true;
    }
    return false;
  }

  private boolean jj_3R_43() {
    if (jj_scan_token(OSET)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_49()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(CSET)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(ASSOC)) return true;
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_35() {
    if (jj_scan_token(VARIABLE)) return true;
    return false;
  }

  private boolean jj_3R_48() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_scan_token(ASSOC)) return true;
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_36() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3R_26() {
    if (jj_3R_34()) return true;
    return false;
  }

  private boolean jj_3R_42() {
    if (jj_scan_token(OLIST)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_48()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(CLIST)) return true;
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_scan_token(REF)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) return true;
    }
    xsp = jj_scanpos;
    if (jj_3_3()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_34() {
    if (jj_scan_token(SYMBOL)) return true;
    return false;
  }

  private boolean jj_3_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_8()) return true;
    }
    return false;
  }

  private boolean jj_3R_40() {
    if (jj_3R_44()) return true;
    return false;
  }

  private boolean jj_3R_39() {
    if (jj_3R_43()) return true;
    return false;
  }

  private boolean jj_3R_38() {
    if (jj_3R_42()) return true;
    return false;
  }

  private boolean jj_3R_33() {
    if (jj_scan_token(NAN)) return true;
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_24() {
    if (jj_3R_37()) return true;
    return false;
  }
